# torch_bspline

./: pyproject.toml
examples/: spline.ipynb  visualize_example.py
src/torch_bspline/: bspline.py  functions.py  tensor_basis.py  tensor_grid.py
