[project]
name = "torch-bspline"
dynamic = ["version"]
description = "A simple library for using b-splines in pytorch."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Hugo Melchers", email = "h.a.melchers@tue.nl"},
    { name = "Jeffrey Cochran", email = "jeffrey.david.cochran@gmail.com"},
]
keywords = ["bpsline", "b-spline", "spline", "pytorch", "torch", "spline", "interpolation", "approximation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch @ https://download.pytorch.org/whl/nightly/cu128/torch-2.7.0.dev20250304%2Bcu128-cp311-cp311-manylinux_2_28_x86_64.whl",
    "pytorch-triton @ https://download.pytorch.org/whl/nightly/pytorch_triton-3.2.0%2Bgit4b3bb1f8-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/nightly/cu128/torchaudio-2.6.0.dev20250304%2Bcu128-cp311-cp311-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/nightly/cu128/torchvision-0.22.0.dev20250304%2Bcu128-cp311-cp311-linux_x86_64.whl",
    "numpy >=1.17,<3",
    "scipy",
    "matplotlib"
]


[project.urls]
Homepage = "https://github.com/jeffrey-cochran/torch_bspline"
Issues = "https://github.com/jeffrey-cochran/torch_bspline/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pytest",
    "ruff"
]


[tool.hatch.version]
path = "src/torch_bspline/__about__.py"


[tool.hatch.build.targets.wheel]
packages = [
    "src/torch_bspline"
]


[tool.hatch.envs.test]
template = "default"
features = [
    "test"
]


[tool.hatch.envs.dev]
template = "default"
features = [
    "dev"
]
